# microservices-demo-rs

./: Cargo.toml  README.md
crates/core_types/: Cargo.toml
crates/core_types/src/: lib.rs  money.rs
crates/core_types/src/policies/: address.rs  cart.rs  credit_card.rs  email.rs  mod.rs  money.rs
loadgenerator/: Dockerfile  locust.env  ping_server.sh  run.sh
services/ad/: Cargo.toml
services/ad/src/: service.rs  types.rs
services/cart/: Cargo.toml
services/cart/src/: service.rs  types.rs
services/checkout/: Cargo.toml
services/checkout/src/: service.rs  types.rs
services/currency/: Cargo.toml
services/currency/src/: lib.rs  service.rs  types.rs
services/email/: Cargo.toml
services/email/src/: service.rs  types.rs
services/payment/: Cargo.toml
services/payment/src/: service.rs  types.rs
services/productcatalog/: Cargo.toml
services/productcatalog/src/: service.rs  types.rs
services/recommendation/: Cargo.toml
services/recommendation/src/: service.rs  types.rs
services/shipping/: Cargo.toml
services/shipping/src/: service.rs  types.rs
src/adservice/: Cargo.toml
src/adservice/src/: server.rs
src/cartservice/: Cargo.toml
src/cartservice/src/: main.rs
src/checkoutservice/: Cargo.toml
src/checkoutservice/data/: db_config.toml  schema.sql
src/checkoutservice/src/: main.rs  money.rs
src/checkoutservice/src/db/: backend.rs  config.rs
src/checkoutservice/src/dependent_services/: cart.rs  catalog.rs  currency.rs  email.rs  mod.rs  payment.rs  shipping.rs
src/currencyservice/: Cargo.toml
src/currencyservice/data/: currency_conversion.json
src/currencyservice/src/: server.rs
src/currencyservice/src/currency_utils/: convert.rs
src/emailservice/: Cargo.toml
src/emailservice/src/: main.rs
src/frontend/: Cargo.toml
src/frontend/src/: main.rs  middleware.rs  utils.rs
src/frontend/src/handlers/: cart.rs  currency.rs  home.rs  mod.rs  product.rs
src/frontend/src/rpcs/: ad.rs  cart.rs  catalog.rs  checkout.rs  currency.rs  mod.rs  recommendation.rs  shipping.rs
src/frontend/templates/: cart.html.tera  footer.html.tera  header.html.tera  product.html.tera  recommendations.html.tera  text_ad.html.tera
src/paymentservice/: Cargo.toml
src/paymentservice/data/: db_config.toml  schema.sql
src/paymentservice/src/: main.rs  validate.rs
src/paymentservice/src/db/: backend.rs
src/productcatalogservice/: Cargo.toml
src/productcatalogservice/src/: main.rs
src/recommendationservice/: Cargo.toml
src/recommendationservice/src/: main.rs
src/shippingservice/: Cargo.toml
src/shippingservice/data/: db_config.toml  schema.sql
src/shippingservice/src/: main.rs  quote.rs
templates/: cart.html.tera  home.html.tera  order.html.tera
