[workspace]
members=["src/adservice",
"services/*", "src/currencyservice", "src/checkoutservice", "src/shippingservice", "src/paymentservice", "src/emailservice", "src/recommendationservice", "src/productcatalogservice", "src/cartservice", "crates/core_types", "src/frontend"]
resolver="2"


[workspace.package]
authors = ["Alexandre Doukhan"]
edition = "2021"

[workspace.dependencies.url]
version = "=2.5.0"

[workspace.dependencies.icu_properties_data]
version = "=1.5.1"

[workspace.dependencies.pest]
version="=2.8.0"

[workspace.dependencies.pest_meta]
version="=2.8.0"

[workspace.dependencies.pest_generator]
version="=2.8.0"

[workspace.dependencies.native-tls]
version="=0.2.11"

[workspace.dependencies]
alohomora = {version = "0.1.0", git = "https://github.com/brownsys/Sesame", branch = "extensions_devel", default-features = false, features = ["alohomora_derive", "derive"]}
tahini_tarpc = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", branch = "standalone_tahini", features = ["derive"]}
#For servers only
hoodini_server = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", branch = "standalone_tahini", features = ["sidecar"]}


[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

