[package]
name = "microservices_core_types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
alohomora.workspace=true
tahini_tarpc.workspace=true

[lib]
name = "microservices_core_types"
path = "src/lib.rs"
