[package]
name = "recommendation_service"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "recommendation_service"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
tarpc = { version = "0.34.0", features = ["full"] }
alohomora = { git = "https://github.com/brownsys/Sesame.git", branch = "tahini-dev", default-features = false, features = ["derive"] }