[package]
name = "checkoutservice"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
checkout_service = {version = "0.1.0", path = "../../services/checkout/"}
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["io-std", "io-util", "rt", "mio", "libc", "tokio-macros", "macros", "rt-multi-thread"] }
cart_service = {version = "0.1.0", path = "../../services/cart/"}
email_service = {version = "0.1.0", path = "../../services/email/"}
productcatalog_service = {version = "0.1.0", path = "../../services/productcatalog/"}
currency_service = {version = "0.1.0", path = "../../services/currency/"}
payment_service = {version = "0.1.0", path = "../../services/payment/"}
shipping_service = {version = "0.1.0", path = "../../services/shipping/"}
uuid = { version = "1.18.0", features = ["v4"] }
mysql = "21.0.2"
mysql_common = "0.29"
toml = "0.9.5"
alohomora = { git = "https://github.com/brownsys/Sesame.git", branch = "tahini-dev", default-features = false, features = ["derive"] }

[patch.crates-io]
funty = { version = "1.2.0", git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[build-dependencies]
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }

[dependencies.url]
version = "=2.5.0"

[dependencies.icu_properties_data]
version = "=1.5.1"

[dependencies.pest]
version="=2.8.0"

[dependencies.pest_meta]
version="=2.8.0"

[dependencies.pest_generator]
version="=2.8.0"

[dependencies.native-tls]
version="=0.2.11"
